--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ linkedin_username: antoni-dimitriadis-795392141
 theme: minima
 plugins:
   - jekyll-feed
+  - jemoji
 
 # Exclude from processing.
 # The following items will not be processed, by default.
